Update Assignment 5 Data Handling and Web Sources.ipynb

--- a/Assignment 5 Data Handling and Web Sources.ipynb
+++ b/Assignment 5 Data Handling and Web Sources.ipynb
@@ -46,6 +46,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "67cb4ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State: Johor, Capital: Johor Bahru, Population: 3794000\n",
+      "State: Kedah, Capital: Alor Setar, Population: 2194100\n",
+      "State: Kelantan, Capital: Kota Bharu, Population: 1928800\n",
+      "State: Malacca, Capital: Malacca City, Population: 937500\n",
+      "State: Negeri Sembilan, Capital: Seremban, Population: 1129100\n",
+      "State: Pahang, Capital: Kuantan, Population: 1684600\n",
+      "State: Penang, Capital: George Town, Population: 1774400\n",
+      "State: Perak, Capital: Ipoh, Population: 2508900\n",
+      "State: Perlis, Capital: Kangar, Population: 255400\n",
+      "State: Sabah, Capital: Kota Kinabalu, Population: 3833000\n",
+      "State: Sarawak, Capital: Kuching, Population: 2822200\n",
+      "State: Selangor, Capital: Shah Alam, Population: 6555400\n",
+      "State: Terengganu, Capital: Kuala Terengganu, Population: 1275100\n",
+      "State: Kuala Lumpur, Capital: Kuala Lumpur, Population: 1746600\n",
+      "State: Labuan, Capital: Victoria, Population: 100100\n",
+      "State: Putrajaya, Capital: Putrajaya, Population: 116100\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "api_url = \"https://jian.sh/malaysia-api/state/v1/all.json\"\n",
+    "response = requests.get(api_url)\n",
+    "malaysia_state_data = response.json()\n",
+    "\n",
+    "for state in malaysia_state_data:\n",
+    "    print(f\"State: {state['state']}, Capital: {state['capital']}, Population: {state['population']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "f16a8758",
    "metadata": {},
@@ -54,7 +93,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the name of a state: Johor\n"
+      "Enter the name of a state: Johor\n",
+      "Population of Johor: 3794000\n",
+      "Enter the name of a state: Unknown State\n",
+      "Unknown State is not found in the data.\n"
      ]
     }
    ],
@@ -99,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a5a160b",
+   "id": "8a8a9616",
    "metadata": {},
    "outputs": [],
    "source": []
